--- a/solve.ipynb
+++ b/solve.ipynb
@@ -20,108 +20,206 @@
     "# Решение\n",
     "### Алгоритм\n",
     "Модифицированный алгоритм Прима\n",
-    "### Вход в виде переменной\n",
-    "Граф, заданный списком вершин.<br>\n",
-    "Пример:<br>\n",
-    "`G = {  \n",
-    "    0: [(1, 1), (2, 3)],  \n",
-    "    1: [(0, 1), (2, 1), (3, 4)],  \n",
-    "    2: [(0, 3), (1, 1), (3, 2)],  \n",
-    "    3: [(1, 4), (2, 2)]  \n",
-    "}`  \n",
+    "\n",
     "### Вход в виде файла\n",
     "Граф `G` можно задать в файле `.txt` следующим образом:  \n",
-    "`0`  \n",
-    "`1 1`  \n",
-    "`2 3`  \n",
-    "`1`  \n",
-    "`0 1`  \n",
-    "`2 1`  \n",
-    "`3 4`  \n",
-    "`2`  \n",
-    "`0 3`  \n",
-    "`1 1`  \n",
-    "`3 2`  \n",
-    "`1 4`  \n",
-    "`3`  \n",
-    "`1 4`  \n",
-    "`2 2`  \n",
-    "В случае нескольких графов в 1 файле, разделитель - пустая строка\n"
+    "  \n",
+    "`0 1 1`  \n",
+    "`0 2 3`  \n",
+    "где формат строки: `<вершина 1> <вершина 2> <вес ребра>`\n",
+    " \n",
+    "В случае нескольких графов в 1 файле, разделитель - `пустая строка`  \n",
+    "Конец файла - `пустая строка`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Зависимости"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import networkx as nx\n",
+    "import random\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Чтение из файла"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_graph_from_file(file_path):\n",
+    "    graphs = []\n",
+    "    G = nx.Graph()\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        lines = file.readlines()\n",
+    "    for line in lines:\n",
+    "        if line == '\\n':\n",
+    "            graphs.append(G)\n",
+    "            G = nx.Graph()\n",
+    "        u, v, w = map(int, line.split())\n",
+    "        G.add_edge(u, v, weight=w)\n",
+    "    return G"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Генерация случайного графа"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Генерация"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_random_graph(num_vertices, num_edges, weight_range):\n",
+    "    G = nx.gnm_random_graph(num_vertices, num_edges)\n",
+    "    for (u, v) in G.edges():\n",
+    "        G[u][v]['weight'] = random.randint(*weight_range)\n",
+    "    return G\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Запись в файл\n",
+    "Модификация for_website позволяет просто скопировать данные из файла и построить граф на сайте [Graph Online](https://graphonline.ru/create_graph_by_edge_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_graph_to_file(G, file_path, mode = 'a', for_website = False):\n",
+    "    with open(file_path, mode=mode) as file:\n",
+    "        for (u, v, data) in G.edges(data=True):\n",
+    "            file.write(f\"{u}{'-' if for_website else ' '}{v}{' ' + data['weight'] if not for_website else ''}\\n\")\n",
+    "        file.write('\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Код\n",
+    "### Описание алгоритма:  \n",
+    "В основе лежит алгоритм Прима для нахождения минимального остовного дерева (MST)  \n",
+    "### Модификация:  \n",
+    "* Количество листьев не должно превышать L \n",
+    "* Степени всех вершин были ограничены 3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prim_mst(G):\n",
+    "    return nx.minimum_spanning_tree(G, algorithm='prim')\n",
+    "\n",
+    "def modify_mst(G, L):\n",
+    "    for node in list(G.nodes):\n",
+    "        while G.degree(node) > 3:\n",
+    "            edges = list(G.edges(node, data=True))\n",
+    "            edges.sort(key=lambda x: x[2]['weight'], reverse=True)\n",
+    "            G.remove_edge(edges[0][0], edges[0][1])\n",
+    "\n",
+    "    leaves = [node for node in G.nodes if G.degree(node) == 1]\n",
+    "    while len(leaves) > L:\n",
+    "        leaf = leaves.pop(0)\n",
+    "        neighbors = list(G.neighbors(leaf))\n",
+    "        if neighbors:\n",
+    "            G.remove_edge(leaf, neighbors[0])\n",
+    "        leaves = [node for node in G.nodes if G.degree(node) == 1]\n",
+    "\n",
+    "    return G\n",
+    "\n",
+    "\n",
+    "def find_mst(G, for_website = False):\n",
+    "    L = math.floor((len(G.nodes) - 10) / 10)\n",
+    "    mst = prim_mst(G)\n",
+    "    modified_mst = modify_mst(mst, L)\n",
+    "    write_graph_to_file(modified_mst, 'output.txt', 'a', for_website=for_website)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Тестирование"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No MST found that satisfies the constraints.\n"
+      "Time: 0.173970 seconds\n",
+      "Time: 0.150473 seconds\n",
+      "Time: 0.165120 seconds\n",
+      "Time: 0.145886 seconds\n",
+      "Time: 0.159298 seconds\n",
+      "Time: 0.154061 seconds\n",
+      "Time: 0.162601 seconds\n",
+      "Time: 0.174378 seconds\n",
+      "Time: 0.160818 seconds\n",
+      "Time: 0.159587 seconds\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.4"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from itertools import combinations\n",
-    "import networkx as nx\n",
-    "\n",
-    "def is_valid_tree(tree, L):\n",
-    "    degree_sequence = [d for _, d in tree.degree()]\n",
-    "    if max(degree_sequence) > 3:\n",
-    "        return False\n",
-    "    leaves = degree_sequence.count(1)\n",
-    "    if leaves > L:\n",
-    "        return False\n",
-    "    return True\n",
-    "\n",
-    "def find_minimum_spanning_tree(graph, L):\n",
-    "    G = nx.Graph()\n",
-    "    for u, edges in graph.items():\n",
-    "        for v, weight in edges:\n",
-    "            G.add_edge(u, v, weight=weight)\n",
-    "\n",
-    "    min_weight = float('inf')\n",
-    "    best_tree = None\n",
-    "\n",
-    "    # Generate all possible spanning trees\n",
-    "    for edges in combinations(G.edges(data=True), len(G.nodes) - 1):\n",
-    "        tree = nx.Graph()\n",
-    "        tree.add_edges_from(edges)\n",
-    "        if nx.is_tree(tree) and is_valid_tree(tree, L):\n",
-    "            total_weight = sum(data['weight'] for _, _, data in tree.edges(data=True))\n",
-    "            if total_weight < min_weight:\n",
-    "                min_weight = total_weight\n",
-    "                best_tree = tree\n",
-    "\n",
-    "    return best_tree\n",
-    "\n",
-    "# Example usage\n",
-    "graph = {\n",
-    "    0: [(1, 1), (2, 3)],\n",
-    "    1: [(0, 1), (2, 1), (3, 4)],\n",
-    "    2: [(0, 3), (1, 1), (3, 2)],\n",
-    "    3: [(1, 4), (2, 2)]\n",
-    "}\n",
-    "L = len(graph) / 10\n",
-    "\n",
-    "mst = find_minimum_spanning_tree(graph, L)\n",
-    "if mst:\n",
-    "    print(\"Found:\")\n",
-    "    for u, v, data in mst.edges(data=True):\n",
-    "        print(f\"Edge {u}-{v} with weight {data['weight']}\")\n",
-    "else:\n",
-    "    print(\"No MST found that satisfies the constraints.\")"
+    "import time\n",
+    "graphs = []\n",
+    "for i in range (10):\n",
+    "    G = generate_random_graph(1000, 2000, (1, 100))\n",
+    "    graphs.append(G)\n",
+    "    \n",
+    "for graph in graphs:\n",
+    "    start_time = time.time()\n",
+    "    mst = find_mst(graph, for_website=True)\n",
+    "    end_time = time.time()\n",
+    "    print(f\"Time: {end_time - start_time:.6f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В выводе показано время работы алгоритма на графах с 1000 вершин и 2000 ребер."
    ]
   }
  ],
