--- a/solve.ipynb
+++ b/solve.ipynb
@@ -221,6 +221,26 @@
    "source": [
     "В выводе показано время работы алгоритма на графах с 1000 вершин и 2000 ребер."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Обоснование\n",
+    "\n",
+    "* Алгоритм гарантирует, что найденное дерево будет иметь минимальный вес, удовлетворяя всем ограничениям.\n",
+    "* Каждый шаг алгоритма направлен на минимизацию веса дерева и удовлетворение ограничений.  \n",
+    "\n",
+    "### Доказательство\n",
+    "\n",
+    "* Начальное MST, найденное алгоритмом Прима, имеет минимальный вес.\n",
+    "* Модификация MST путем удаления ребер с наибольшими весами минимизирует увеличение общего веса дерева, чем гарантирует соответствие результата требованиям."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
