--- a/solve.ipynb
+++ b/solve.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +72,7 @@
     "        if line == '\\n':\n",
     "            graphs.append(G)\n",
     "            G = nx.Graph()\n",
+    "            continue\n",
     "        u, v, w = map(int, line.split())\n",
     "        G.add_edge(u, v, weight=w)\n",
     "    return G"
