--- a/solve.ipynb
+++ b/solve.ipynb
@@ -110,7 +110,9 @@
    "metadata": {},
    "source": [
     "# Запись в файл\n",
-    "Модификация for_website позволяет просто скопировать данные из файла и построить граф на сайте [Graph Online](https://graphonline.ru/create_graph_by_edge_list)"
+    "Модификация `for_website` позволяет просто скопировать данные из файла и построить граф на сайте [Graph Online](https://graphonline.ru/create_graph_by_edge_list)  \n",
+    "\n",
+    "<b>ВАЖНО:</b> В  `input.txt` `for_website=True` неприемлем."
    ]
   },
   {
